<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:orientation="vertical"
    tools:context=".view.MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="301dp"
        android:layout_height="185dp"
        android:layout_marginStart="65dp"
        android:layout_marginEnd="65dp"
        android:src="@drawable/logo_large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.111"
        app:layout_constraintVertical_chainStyle="spread" />

    <android.widget.Button
        android:id="@+id/button"
        android:layout_width="335dp"
        android:layout_height="50dp"
        android:background="@color/yellow"
        android:drawableEnd="@drawable/ic_marker"
        android:fontFamily="@font/oswald"
        android:paddingRight="20dp"
        android:text="@string/supermercado"
        android:textColor="#5D4037"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.458" />

    <android.widget.Button
        android:id="@+id/button2"
        android:layout_width="335dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:background="@color/green"
        android:drawableEnd="@drawable/ic_credit_card"
        android:fontFamily="@font/oswald"
        android:paddingRight="20dp"
        android:text="@string/history"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.626" />

    <android.widget.Button
        android:id="@+id/button3"
        android:layout_width="335dp"
        android:layout_height="50dp"
        android:background="@color/blue"
        android:drawableEnd="@drawable/ic_bank"
        android:fontFamily="@font/oswald"
        android:paddingEnd="20dp"
        android:rotationX="5"
        android:text="@string/creditos"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.785" />


</androidx.constraintlayout.widget.ConstraintLayout>